--- a/obesitas_klasifikasi.ipynb
+++ b/obesitas_klasifikasi.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,11 +16,21 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/BenayaLewi1/UAS-AI/blob/main/obesitas_klasifikasi.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
         "Klasifikasi Obesitas menggunakan KNN\n",
         "\n",
-        "Dibuat oleh : Benaya_Lewi_Simangunsong"
+        "Dibuat oleh : Benaya_Lewi_Mangunsong"
       ],
       "metadata": {
         "id": "CHJ0xFmEb-oh"
